<resources>
    <string name="app_name">Edu_Academic_Solution</string>
    <string name="reason">Reason</string>
    <string name="class_name">Class Name</string>
    <string name="name">Name</string>
    <string name="feedback">Feedback</string>
    <string name="submit">SUBMIT</string>
    <string name="pdf_file_name">PDF File Name</string>
    <string name="select_file">Select_file</string>
    <string name="hint">hint</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="view_pdf_files">View PDF Files</string>
    <string name="pdf_name">PDF Name</string>
    <string name="todo">TODO</string>
    <string name="img">TODO</string>
    <string name="bonafide_request">Bonafide Request</string>
    <string name="fees">Fees</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="view_attendance">View Attendance</string>
    <string name="daily_attendance">Daily Attendance</string>
    <string name="remove_student">Remove Student</string>
    <string name="add_student">Add Student</string>
    <string name="_01" />
    <string name="samrudhi_pawar" />
    <string name="p" />
    <string name="action_settings" />
    <string name="notes">NOTES</string>
</resources>