<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="6dp"
    android:layout_marginTop="6dp"
    app:cardUseCompatPadding="false"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="false"
    app:cardCornerRadius="4dp">


   <RelativeLayout
       android:paddingStart="36dp"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="8dp"
           android:layout_centerVertical="true"
           >

           <TextView
               android:id="@+id/roll"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/_01"
               android:textColor="#000000"
               android:textSize="20sp"
               android:textStyle="bold"/>

           <TextView
               android:id="@+id/name"
               android:layout_marginStart="56dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/samrudhi_pawar"
               android:textColor="#000000"
               android:textSize="20sp"
               android:textStyle="bold"/>

           <TextView
               android:id="@+id/status"
               android:layout_alignParentEnd="true"
               android:layout_marginEnd="36dp"
               android:layout_marginStart="56dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/p"
               android:textColor="#000000"
               android:textSize="20sp"
               android:textStyle="bold"/>


       </RelativeLayout>




   </RelativeLayout>

</androidx.cardview.widget.CardView>