<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Feedback">

    <TextView
        android:id="@+id/txtFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/feedback"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_below="@id/txtFeedback"
        android:gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="60dp"
        android:background="@android:drawable/btn_dropdown" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:counterMaxLength="1"
        android:hint="@string/reason">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="370dp"
        android:layout_height="144dp"
        android:layout_gravity="center"
        android:gravity="top"
        android:layout_margin="20dp"
        android:inputType="textMultiLine"
        android:lines="10"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false" />

</com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/purple"
        android:text="@string/submit"
        android:layout_margin="20dp"
        android:onClick="submitFeedback"
        android:layout_below="@+id/edtReason"
        android:textSize="18sp"
        app:cardCornerRadius="20dp" />

</RelativeLayout>