<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UploadPDF1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:id="@+id/uploadText"
        android:background="@drawable/linear_back">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_file"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            android:letterSpacing="0.03"/>



    </LinearLayout>


    <TextView
        android:id="@+id/pdfName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/uploadText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:includeFontPadding="false"
        android:letterSpacing="0.02"
        android:padding="12dp"
        android:text="PDF Name"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/uploadButton1"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_below="@+id/pdfName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="82dp"
        android:background="@color/purple"
        android:text="@string/upload_pdf"
        android:textSize="22sp" />

    <Button
        android:id="@+id/viewButton1"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_below="@+id/uploadButton1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="71dp"
        android:textAllCaps="false"
        android:layout_marginEnd="82dp"
        android:onClick="viewPDF"
        android:background="@color/purple"
        android:text="@string/view_pdf_files"
        android:textSize="22sp"
        tools:ignore="UsingOnClickInXml" />


</RelativeLayout>