<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Bonafide">

    <TextView
        android:id="@+id/txtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Bonafide Request"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp"
        app:counterMaxLength="1"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bonafideRequestStudentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
           android:layout_margin="20dp"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/class_name"
       android:layout_below="@+id/edtName"
       android:layout_marginTop="20dp"
       app:counterMaxLength="1"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:id="@+id/edtClass">

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/bonafideRequestStudentClassName"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="20dp"
           android:layout_gravity="center"
           android:inputType="text"/>

   </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtReason"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="223dp"
        android:layout_below="@+id/edtClass"
        android:layout_marginTop="20dp"
        android:hint="@string/reason"
        app:counterMaxLength="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bonafideRequestStudentReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="10"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/bonafideRequestButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtReason"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple"
        android:onClick="submitBtn"
        android:text="SUBMIT"
        android:textSize="18sp"
        app:cardCornerRadius="20dp" />



</RelativeLayout>