<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeScreen">

    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="250dp"
        android:layout_height="137dp"
        android:gravity="center"
        android:paddingTop="5dp"
        android:text="Class 11th &amp; 12th Science"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/chooseClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Choose Your Class "
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_below="@id/headerTitle"
        android:textStyle="bold"
        />


    <GridLayout
        android:id="@+id/gridChooseClass"
        android:layout_width="394dp"
        android:layout_height="147dp"
        android:layout_below="@id/chooseClass"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="37dp"
        android:background="@color/white"
        android:columnCount="2"
        android:rowCount="1">

        <androidx.cardview.widget.CardView
            android:id="@+id/classFirst"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="15dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"

            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="11th Class"
                    android:textColor="@color/black"
                    android:textSize="25sp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/classSecond"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="15dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"

            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="12th Class"
                    android:textColor="@color/black"
                    android:textSize="25sp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </GridLayout>


    <TextView
        android:id="@+id/feesTextField"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/gridChooseClass"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:text="@string/fees"
        android:textColor="@color/white"
        android:textSize="25sp" />


    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/feesTextField"
        android:id="@+id/feedbackTextField"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:text="@string/feedback"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:id="@+id/bonafideRequestTextField"
        android:layout_below="@+id/feedbackTextField"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:text="@string/bonafide_request"
        android:textColor="@color/white"
        android:textSize="25sp" />


</RelativeLayout>